--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "repository",
+  "name": "GDW Repository für WG-Einkaufslisten-API",
   "version": "1.0.0",
-  "description": "",
+  "description": "Eine API für das Berechnen der Gesamtkosten von Mitbewohnern einer WG bei gemeinsamen Einkäufen",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Colin van Eimeren, Collin Seibt, Konstantin Kowalski",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2"
