--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "description": "Eine API für das Berechnen der Gesamtkosten von Mitbewohnern einer WG bei gemeinsamen Einkäufen",
   "main": "src/index.js",
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
-},
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "author": "Colin van Eimeren, Collin Seibt, Konstantin Kowalski",
   "license": "ISC",
   "dependencies": {
