--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "package",
   "version": "1.0.0",
   "description": "Eine API für das Berechnen der Gesamtkosten von Mitbewohnern einer WG bei gemeinsamen Einkäufen",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "src/index.js"    
   },
  
   "author": "Colin van Eimeren, Collin Seibt, Konstantin Kowalski",
